# shader-description

./: .gitignore  CMakeLists.txt  buffer.schema.json  conanfile.py  constant.schema.json  fragment-input.schema.json  fragment-output.schema.json  fragment-shader.schema.json  glsl-type.schema.json  image-type.schema.json  image.schema.json  make-package.sh  push-constant.schema.json  run-build.sh  run-test.sh  sampler.schema.json  shader-desc.schema.json  test-shader-desc0.json  test-shader.vert.json  upload-schemas.sh  vertex-input.schema.json  vertex-output.schema.json  vertex-shader.schema.json
src/: CMakeLists.txt  buffer.hpp  buffer_block.hpp  compile_hash.hpp  glsl_type.hpp  main.cpp  make_buffer.hpp  make_buffer.test.cpp  make_constant.hpp  make_constant.test.cpp  make_fragment_input.hpp  make_fragment_input.test.cpp  make_fragment_output.hpp  make_fragment_output.test.cpp  make_fragment_shader.hpp  make_fragment_shader.test.cpp  make_glsl_buffer.hpp  make_glsl_buffer.test.cpp  make_glsl_image.hpp  make_glsl_image.test.cpp  make_glsl_input.hpp  make_glsl_input.test.cpp  make_glsl_output.hpp  make_glsl_output.test.cpp  make_image.hpp  make_image.test.cpp  make_input.hpp  make_input.test.cpp  make_output.hpp  make_output.test.cpp  make_push_constant.hpp  make_push_constant.test.cpp  make_sampler.hpp  make_sampler.test.cpp  make_shader.hpp  make_shader.test.cpp  make_vertex_input.hpp  make_vertex_input.test.cpp  make_vertex_output.hpp  make_vertex_output.test.cpp  (+4 more)
src/glsl/: make_buffer.hpp  make_buffer.test.cpp  make_image.hpp  make_image.test.cpp  make_input.hpp  make_input.test.cpp  make_output.hpp  make_output.test.cpp
